exports[`Layout renders no transactions if there are none and ready 1`] = `
<div>
  <Meta
    title="Giving History" />
  <Filter
    family={Array []} />
  <div
    className="soft-half soft@portable soft-double@anchored soft-double-bottom@anchored soft-bottom@portable">
    <div
      className="text-left soft-ends soft-half-sides">
      <p>
        We didn\'t find any contributions associated with your account. If you would like to start giving, click 
        <Link
          onlyActiveOnIndex={false}
          style={Object {}}
          to="/give/now">
          here
        </Link>
      </p>
      <p>
        <em>
          If you have any questions, please call our Finance Team at 864-965-9990 or
          <a
            href="//rock.newspring.cc/workflows/152?Topic=Stewardship"
            rel="noopener noreferrer"
            target="_blank">
            contact us
          </a>
           and someone will be happy to assist you.
        </em>
      </p>
    </div>
    <TransactionList
      transactions={Array []} />
  </div>
  <div
    className="one-whole text-center" />
  <div
    className="fixed visuallyhidden@handheld"
    style={
      Object {
        "bottom": "175px",
        "left": "58.33%",
        "zIndex": 10,
      }
    }>
    <div
      className="card"
      style={
        Object {
          "borderRadius": "50%",
          "marginLeft": "2px",
        }
      }>
      <div
        className="card__item background--light-secondary soft-half"
        style={
          Object {
            "padding": "15px 17px",
          }
        }>
        <span
          className="icon-print"
          style={
            Object {
              "fontSize": "28px",
            }
          } />
      </div>
    </div>
  </div>
</div>
`;

exports[`Layout renders reloading if no transactions and not ready 1`] = `
<div>
  <Meta
    title="Giving History" />
  <Filter
    family={Array []} />
  <div
    className="soft-half soft@portable soft-double@anchored soft-double-bottom@anchored soft-bottom@portable">
    <div
      className="text-center soft">
      <Spinner
        styles={
          Object {
            "height": "40px",
            "width": "40px",
          }
        } />
    </div>
    <TransactionList
      transactions={Array []} />
  </div>
  <div
    className="one-whole text-center" />
  <div
    className="fixed visuallyhidden@handheld"
    style={
      Object {
        "bottom": "175px",
        "left": "58.33%",
        "zIndex": 10,
      }
    }>
    <div
      className="card"
      style={
        Object {
          "borderRadius": "50%",
          "marginLeft": "2px",
        }
      }>
      <div
        className="card__item background--light-secondary soft-half"
        style={
          Object {
            "padding": "15px 17px",
          }
        }>
        <span
          className="icon-print"
          style={
            Object {
              "fontSize": "28px",
            }
          } />
      </div>
    </div>
  </div>
</div>
`;

exports[`Layout renders reloading version 1`] = `
<div>
  <Meta
    title="Giving History" />
  <Filter
    family={Array []} />
  <div
    className="soft-half soft@portable soft-double@anchored soft-double-bottom@anchored soft-bottom@portable">
    <div
      className="text-center soft">
      <Spinner
        styles={
          Object {
            "height": "40px",
            "width": "40px",
          }
        } />
    </div>
    <div
      className="visuallyhidden@lap-and-up"
      style={
        Object {
          "cursor": "pointer",
        }
      }>
      <div
        style={
          Object {
            "marginTop": "13px",
            "position": "absolute",
            "right": "17px",
          }
        }>
        <span
          className="icon-print"
          style={
            Object {
              "fontSize": "22px",
            }
          } />
      </div>
    </div>
    <TransactionList
      transactions={
        Array [
          Object {
            "date": "2012-12-12",
            "details": Array [
              Object {
                "account": "test",
                "amount": 2,
              },
              Object {
                "account": "test",
                "amount": 2,
              },
            ],
          },
          Object {
            "date": "2012-12-12",
            "details": Array [
              Object {
                "account": "test",
                "amount": 2,
              },
              Object {
                "account": "test",
                "amount": 2,
              },
            ],
          },
        ]
      } />
  </div>
  <div
    className="one-whole text-center" />
  <div
    className="fixed visuallyhidden@handheld"
    style={
      Object {
        "bottom": "175px",
        "left": "58.33%",
        "zIndex": 10,
      }
    }>
    <div
      className="card"
      style={
        Object {
          "borderRadius": "50%",
          "marginLeft": "2px",
        }
      }>
      <div
        className="card__item background--light-secondary soft-half"
        style={
          Object {
            "padding": "15px 17px",
          }
        }>
        <span
          className="icon-print"
          style={
            Object {
              "fontSize": "28px",
            }
          } />
      </div>
    </div>
  </div>
</div>
`;

exports[`Layout renders with negative transactions 1`] = `
<div>
  <Meta
    title="Giving History" />
  <Filter
    family={Array []} />
  <div
    className="soft-half soft@portable soft-double@anchored soft-double-bottom@anchored soft-bottom@portable">
    <div
      className="visuallyhidden@lap-and-up"
      style={
        Object {
          "cursor": "pointer",
        }
      }>
      <div
        style={
          Object {
            "marginTop": "13px",
            "position": "absolute",
            "right": "17px",
          }
        }>
        <span
          className="icon-print"
          style={
            Object {
              "fontSize": "22px",
            }
          } />
      </div>
    </div>
    <TransactionList
      transactions={
        Array [
          Object {
            "date": "2012-12-12",
            "details": Array [
              Object {
                "account": "test",
                "amount": -1,
              },
            ],
          },
          Object {
            "date": "2012-12-12",
            "details": Array [
              Object {
                "account": "Other Test",
                "amount": 2,
              },
              Object {
                "account": "Third Test",
                "amount": 2,
              },
            ],
          },
        ]
      } />
  </div>
  <div
    className="one-whole text-center">
    <mockConstructor />
  </div>
  <div
    className="fixed visuallyhidden@handheld"
    style={
      Object {
        "bottom": "175px",
        "left": "58.33%",
        "zIndex": 10,
      }
    }>
    <div
      className="card"
      style={
        Object {
          "borderRadius": "50%",
          "marginLeft": "2px",
        }
      }>
      <div
        className="card__item background--light-secondary soft-half"
        style={
          Object {
            "padding": "15px 17px",
          }
        }>
        <span
          className="icon-print"
          style={
            Object {
              "fontSize": "28px",
            }
          } />
      </div>
    </div>
  </div>
</div>
`;

exports[`Layout renders with props 1`] = `
<div>
  <Meta
    title="Giving History" />
  <Filter
    family={Array []} />
  <div
    className="soft-half soft@portable soft-double@anchored soft-double-bottom@anchored soft-bottom@portable">
    <div
      className="visuallyhidden@lap-and-up"
      style={
        Object {
          "cursor": "pointer",
        }
      }>
      <div
        style={
          Object {
            "marginTop": "13px",
            "position": "absolute",
            "right": "17px",
          }
        }>
        <span
          className="icon-print"
          style={
            Object {
              "fontSize": "22px",
            }
          } />
      </div>
    </div>
    <TransactionList
      transactions={
        Array [
          Object {
            "date": "2012-12-12",
            "details": Array [
              Object {
                "account": "test",
                "amount": 2,
              },
              Object {
                "account": "test",
                "amount": 2,
              },
            ],
          },
          Object {
            "date": "2012-12-12",
            "details": Array [
              Object {
                "account": "test",
                "amount": 2,
              },
              Object {
                "account": "test",
                "amount": 2,
              },
            ],
          },
        ]
      } />
  </div>
  <div
    className="one-whole text-center">
    <mockConstructor />
  </div>
  <div
    className="fixed visuallyhidden@handheld"
    style={
      Object {
        "bottom": "175px",
        "left": "58.33%",
        "zIndex": 10,
      }
    }>
    <div
      className="card"
      style={
        Object {
          "borderRadius": "50%",
          "marginLeft": "2px",
        }
      }>
      <div
        className="card__item background--light-secondary soft-half"
        style={
          Object {
            "padding": "15px 17px",
          }
        }>
        <span
          className="icon-print"
          style={
            Object {
              "fontSize": "28px",
            }
          } />
      </div>
    </div>
  </div>
</div>
`;
